# anime-metadata-cache2

./: .editorconfig  .gitignore
api/: pyproject.toml  setup.cfg
api/amc2_api/: model.py  utils.py
api/amc2_api/anidb/: __init__.py  anime.py  parse.py  titles.py
api/amc2_api/api/: __init__.py  config.py  dependencies.py  model.py  responses.py
api/amc2_api/api/routers/: anidb.py  anime.py  match.py  tmdb.py
api/amc2_api/mapping/: __init__.py  model.py  repo.py  title_matching.py
api/amc2_api/persistence/: __init__.py  cached_store.py  file_store.py  http_store.py  model.py  s3_store.py
api/amc2_api/tmdb/: __init__.py  parse.py  shows.py  titles.py
docker/: amc2-api.Dockerfile
kodi/metadata.amc2.tv/: addon.xml  tvscraper.py  tvscraper_common.py  utils.py
kodi/metadata.amc2.tv/resources/: settings.xml
kodi/metadata.amc2.tv/resources/language/resource.language.en_gb/: strings.po
