[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[mypy]
incremental = true
follow_imports = 'silent'

disallow_any_unimported = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

